--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 @import "tailwindcss";
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('/fonts/HelveticaNeue-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 
 html {
   scroll-behavior: smooth;
@@ -70,4 +76,9 @@ body::-webkit-scrollbar {
 
 .font-helvetica {
   font-family: Helvetica, Arial, sans-serif;
+}
+
+
+.helvetica-neue {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
