--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inder&family=Lato:wght@400;700&family=Onest:wght@400;600;700&display=swap');
 @import "tailwindcss";
 @font-face {
   font-family: 'Helvetica Neue';
@@ -81,4 +82,41 @@ body::-webkit-scrollbar {
 
 .helvetica-neue {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+
+/* Example CSS classes */
+.font-onest {
+  font-family: 'Onest', sans-serif;
+}
+
+.font-lato {
+  font-family: 'Lato', sans-serif;
+}
+
+.font-inder {
+  font-family: 'Inder', sans-serif;
+}
+
+
+
+
+/* src/index.css */
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 6px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #FFB91A; /* beige */
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #FFB91A; /* black */
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #FFB91A; /* yellow on hover */
 }
